--- a/frontend/src/app/modules/posts/components/comment-list/comment-list.component.html
+++ b/frontend/src/app/modules/posts/components/comment-list/comment-list.component.html
@@ -1,29 +1,17 @@
 <app-loading-spinner [isLoading]="isLoading()"></app-loading-spinner>
-<ul *ngIf="numberOfComments <= 3" class="flex flex-col gap-4">
-  <li *ngFor="let comment of comments">
-    <app-comment [comment] ="comment"></app-comment>
-  </li>
-</ul>
-
-<ul *ngIf="numberOfComments > 3 && !showAll" class="flex flex-col gap-4">
-  <li *ngFor="let comment of comments | slice:0:3">
+<ul class="flex flex-col gap-4">
+  <li *ngFor="let comment of comments; let i = index" [hidden]="numberOfComments > 2 && !showAll && i >= 2">
     <app-comment [comment]="comment"></app-comment>
   </li>
-  <div class="text-center" *ngIf="numberOfComments-3===1">
-    <p (click)="showAll = !showAll"  class="text-center text-xs cursor-pointer">Show {{numberOfComments-3}} more comment...</p>
-  </div>
-  <div class="text-center" *ngIf="numberOfComments-3 > 1">
-    <p (click)="showAll = !showAll"  class="text-xs cursor-pointer inline-block">
-      Show {{numberOfComments-3}} more comments...
+  <div *ngIf="numberOfComments > 3" class="text-center">
+    <p *ngIf="!showAll && numberOfComments - 2 === 1" (click)="showAll = !showAll" class="text-xs cursor-pointer">
+      Show 1 more comment...
     </p>
-  </div>
-</ul>
-
-<ul *ngIf="numberOfComments > 3 && showAll" class="flex flex-col gap-4">
-  <li *ngFor="let comment of comments">
-    <app-comment [comment] ="comment"></app-comment>
-  </li>
-  <div class="text-center">
-    <p (click)="showAll = !showAll" class="inline-block text-xs cursor-pointer">Hide comments</p>
+    <p *ngIf="!showAll && numberOfComments - 2 > 1" (click)="showAll = !showAll" class="text-xs cursor-pointer inline-block">
+      Show {{numberOfComments - 2}} more comments...
+    </p>
+    <p *ngIf="showAll" (click)="showAll = !showAll" class="text-xs cursor-pointer inline-block">
+      Hide comments
+    </p>
   </div>
 </ul>
