--- a/frontend/src/app/modules/posts/components/comment-list/comment-list.component.html
+++ b/frontend/src/app/modules/posts/components/comment-list/comment-list.component.html
@@ -1,17 +1,17 @@
-<app-loading-spinner [isLoading]="isLoading()"></app-loading-spinner>
 <ul class="flex flex-col gap-4">
-  <li *ngFor="let comment of comments; let i = index" [hidden]="numberOfComments > 2 && !showAll && i >= 2">
+  <li *ngFor="let comment of comments">
     <app-comment [comment]="comment"></app-comment>
   </li>
-  <div *ngIf="numberOfComments > 3" class="text-center">
-    <p *ngIf="!showAll && numberOfComments - 2 === 1" (click)="showAll = !showAll" class="text-xs cursor-pointer">
-      Show 1 more comment...
-    </p>
-    <p *ngIf="!showAll && numberOfComments - 2 > 1" (click)="showAll = !showAll" class="text-xs cursor-pointer inline-block">
-      Show {{numberOfComments - 2}} more comments...
-    </p>
-    <p *ngIf="showAll" (click)="showAll = !showAll" class="text-xs cursor-pointer inline-block">
-      Hide comments
-    </p>
+  <div *ngIf="totalNumberOfComments - numberOfComments >= 10" class="text-center">
+    <p (click)="getComments()" class="text-xs cursor-pointer inline-block">Show 10 more comments...</p>
   </div>
+  <div *ngIf="totalNumberOfComments - numberOfComments < 10 && totalNumberOfComments - numberOfComments > 1" class="text-center">
+    <p (click)="getComments()" class="text-xs cursor-pointer inline-block">Show {{totalNumberOfComments - numberOfComments}} more comments...</p>
+  </div>
+  <div *ngIf="totalNumberOfComments - numberOfComments === 1" class="text-center">
+    <p (click)="getComments()" class="text-xs cursor-pointer inline-block">Show 1 more comment...</p>
+  </div>
+
 </ul>
+<app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
+
