reaction choose tooltip color change

--- a/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
+++ b/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
@@ -35,25 +35,30 @@
       <span class="material-symbols-outlined inline">thumb_up</span>
       <p>Like</p>
     </div>
-    <span class="tooltiptext bg-neutral flex flex-row text-xl">
+    <span class="tooltiptext bg-base-300 border-black border-2 flex flex-row text-xl">
       <div class="flex flex-col gap-1">
-        <span class="p-1 h-9 transition hover:bg-base-200 rounded">👍</span>
+        <span class="p-1 h-9 transition hover:bg-base-100 rounded">👍</span>
         <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
       <div class="flex flex-col gap-1">
-        <span class="p-1 h-9 transition hover:bg-base-200 rounded">❤️</span>
+        <span class="p-1 h-9 transition hover:bg-base-100 rounded">❤️</span>
+        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
       <div class="flex flex-col gap-1">
-        <span class="p-1 h-9 transition hover:bg-base-200 rounded">🤣</span>
+        <span class="p-1 h-9 transition hover:bg-base-100 rounded">🤣</span>
+        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
       <div class="flex flex-col gap-1">
-        <span class="p-1 h-9 transition hover:bg-base-200 rounded">😮</span>
+        <span class="p-1 h-9 transition hover:bg-base-100 rounded">😮</span>
+        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
       <div class="flex flex-col gap-1">
-        <span class="p-1 h-9 transition hover:bg-base-200 rounded">😭</span>
+        <span class="p-1 h-9 transition hover:bg-base-100 rounded">😭</span>
+        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
       <div class="flex flex-col gap-1">
-        <span class="p-1 h-9 transition hover:bg-base-200 rounded">😡</span>
+        <span class="p-1 h-9 transition hover:bg-base-100 rounded">😡</span>
+        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
     </span>
   </button>
