--- a/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
+++ b/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
@@ -31,34 +31,34 @@
 </div>
 <div class="flex flex-row justify-between font-semibold">
   <button class="mytooltip w-1/3 py-2 hover:bg-base-200 rounded">
-    <div class="flex flex-row gap-2 justify-center">
+    <div [ngClass]="{ 'flex flex-row gap-2 justify-center': true, 'text-secondary': post.currentUserReaction}">
       <span class="material-symbols-outlined inline">thumb_up</span>
       <p>Like</p>
     </div>
     <span class="tooltiptext bg-base-300 border-black border-2 flex flex-row text-xl">
-      <div class="flex flex-col gap-1">
+      <div class="flex flex-col gap-1" (click)="upsertReaction(like)">
         <span class="p-1 h-9 transition hover:bg-base-100 rounded">👍</span>
-        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
+        <span *ngIf="post.currentUserReaction === like" class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
-      <div class="flex flex-col gap-1">
+      <div class="flex flex-col gap-1" (click)="upsertReaction(love)">
         <span class="p-1 h-9 transition hover:bg-base-100 rounded">❤️</span>
-        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
+        <span *ngIf="post.currentUserReaction === love" class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
-      <div class="flex flex-col gap-1">
+      <div class="flex flex-col gap-1" (click)="upsertReaction(haha)">
         <span class="p-1 h-9 transition hover:bg-base-100 rounded">🤣</span>
-        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
+        <span *ngIf="post.currentUserReaction === haha" class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
-      <div class="flex flex-col gap-1">
+      <div class="flex flex-col gap-1" (click)="upsertReaction(wow)">
         <span class="p-1 h-9 transition hover:bg-base-100 rounded">😮</span>
-        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
+        <span *ngIf="post.currentUserReaction === wow" class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
-      <div class="flex flex-col gap-1">
+      <div class="flex flex-col gap-1" (click)="upsertReaction(sad)">
         <span class="p-1 h-9 transition hover:bg-base-100 rounded">😭</span>
-        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
+        <span *ngIf="post.currentUserReaction=== sad" ="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
-      <div class="flex flex-col gap-1">
+      <div class="flex flex-col gap-1" (click)="upsertReaction(wrr)">
         <span class="p-1 h-9 transition hover:bg-base-100 rounded">😡</span>
-        <span class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
+        <span *ngIf="post.currentUserReaction === wrr" class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
     </span>
   </button>
