updating user reaction in ui

--- a/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
+++ b/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
@@ -14,7 +14,7 @@
           <p class="-ml-2">👏</p>
         </div>
       </div>
-      <p class="text-lg font-semibold">2137</p>
+      <p class="text-lg font-semibold">{{ post.reactions.sumOfReactions }}</p>
     </div>
     <div
       class="flex flex-row gap-2 px-2"
