--- a/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
+++ b/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
@@ -1,37 +1,29 @@
 <div class="flex flex-row justify-between p-1">
   <div class="flex flex-row justify-between w-full rounded">
-    <div
-      class="flex flex-row gap-2 pl-1 pr-2"
-    >
+    <div class="flex flex-row gap-2 pl-1 pr-2">
       <div class="text-xl flex flex-row">
         <div class="tooltip tooltip-top" data-tip="2000">
           <p class="">👍</p>
         </div>
-        <div class="tooltip tooltip-top" data-tip="136">
+        <div *ngIf="postReactionTypesCount > 1" class="tooltip tooltip-top" data-tip="136">
           <p class="-ml-2">👎</p>
         </div>
-        <div class="tooltip tooltip-top" data-tip="1">
+        <div *ngIf="postReactionTypesCount > 2" class="tooltip tooltip-top" data-tip="1">
           <p class="-ml-2">👏</p>
         </div>
       </div>
       <p class="text-lg font-semibold">{{ post.reactions.sumOfReactions }}</p>
     </div>
-    <div
-      class="flex flex-row gap-2 px-2"
-    >
-      <span class="material-symbols-outlined text-secondary my-auto"
-        >comment</span
-      >
+    <div class="flex flex-row gap-2 px-2">
+      <span class="material-symbols-outlined text-secondary my-auto">comment</span>
       <p class="text-lg font-semibold">420</p>
     </div>
   </div>
-  <div *ngIf="isVisible" style="font-size: 14px" class="italic">
-    Edited {{ formattedDate }}
-  </div>
+  <div *ngIf="isVisible" style="font-size: 14px" class="italic">Edited {{ formattedDate }}</div>
 </div>
 <div class="flex flex-row justify-between font-semibold">
   <button class="mytooltip w-1/3 py-2 hover:bg-base-200 rounded">
-    <div [ngClass]="{ 'flex flex-row gap-2 justify-center': true, 'text-secondary': post.currentUserReaction}">
+    <div [ngClass]="{ 'flex flex-row gap-2 justify-center': true, 'text-secondary': post.currentUserReaction }">
       <span class="material-symbols-outlined inline">thumb_up</span>
       <p>Like</p>
     </div>
@@ -54,7 +46,7 @@
       </div>
       <div class="flex flex-col gap-1" (click)="upsertReaction(sad)">
         <span class="p-1 h-9 transition hover:bg-base-100 rounded">😭</span>
-        <span *ngIf="post.currentUserReaction=== sad" ="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
+        <span *ngIf="post.currentUserReaction === sad" class="w-1 h-1 rounded-full bg-sky-500 mx-auto"></span>
       </div>
       <div class="flex flex-col gap-1" (click)="upsertReaction(wrr)">
         <span class="p-1 h-9 transition hover:bg-base-100 rounded">😡</span>
