--- a/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
+++ b/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
@@ -40,8 +40,32 @@
 <div class="flex flex-row justify-between font-semibold">
   <button class="mytooltip w-1/3 py-2 hover:bg-base-200 rounded">
     <div [ngClass]="{ 'flex flex-row gap-2 justify-center': true, 'text-secondary': post.currentUserReaction }">
-      <span class="material-symbols-outlined inline">thumb_up</span>
-      <p>Like</p>
+      <span *ngIf="!post.currentUserReaction" class="material-symbols-outlined inline">thumb_up</span>
+      <div *ngIf="post.currentUserReaction === like" class="flex flex-row gap-2">
+        <p>👍</p>
+        <p>Like</p>
+      </div>
+      <div *ngIf="post.currentUserReaction === love" class="flex flex-row gap-2">
+        <p>❤️</p>
+        <p>Love</p>
+      </div>
+      <div *ngIf="post.currentUserReaction === haha" class="flex flex-row gap-2">
+        <p>🤣</p>
+        <p>Haha</p>
+      </div>
+      <div *ngIf="post.currentUserReaction === wow" class="flex flex-row gap-2">
+        <p>😮</p>
+        <p>Wow</p>
+      </div>
+      <div *ngIf="post.currentUserReaction === sad" class="flex flex-row gap-2">
+        <p>😭</p>
+        <p>Sad</p>
+      </div>
+      <div *ngIf="post.currentUserReaction === wrr" class="flex flex-row gap-2">
+        <p>😡</p>
+        <p>Wrr</p>
+      </div>
+      <p *ngIf="!post.currentUserReaction">Like</p>
     </div>
     <span class="tooltiptext bg-base-300 border-black border-2 flex flex-row text-xl">
       <div class="flex flex-col gap-1" (click)="upsertReaction(like)">
