--- a/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
+++ b/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="isVisible" class="italic text-[14px] text-right">Edited {{ formattedDate }}</div>
 <div class="flex flex-row justify-between p-1">
   <div class="flex flex-row justify-between w-full rounded">
     <div class="flex flex-row gap-2 pl-1 pr-2">
@@ -35,7 +36,6 @@
       <p class="text-lg font-semibold">420</p>
     </div>
   </div>
-  <div *ngIf="isVisible" style="font-size: 14px" class="italic">Edited {{ formattedDate }}</div>
 </div>
 <div class="flex flex-row justify-between font-semibold">
   <button class="mytooltip w-1/3 py-2 hover:bg-base-200 rounded">
