--- a/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
+++ b/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
@@ -3,7 +3,7 @@
   <div class="flex flex-row justify-between w-full rounded">
     <div class="flex flex-row gap-2 pl-1 pr-2">
       <div class="text-xl flex flex-row">
-        <div class="tooltip tooltip-top" data-tip="2000">
+        <div class="mytooltip">
           <p *ngIf="sortedReactions.length === 0" class="">👍</p>
           <p *ngIf="sortedReactions.length > 0 && sortedReactions[0][0] === like" class="">👍</p>
           <p *ngIf="sortedReactions.length > 0 && sortedReactions[0][0] === love" class="">❤️</p>
@@ -11,22 +11,43 @@
           <p *ngIf="sortedReactions.length > 0 && sortedReactions[0][0] === wow" class="">😮</p>
           <p *ngIf="sortedReactions.length > 0 && sortedReactions[0][0] === sad" class="">😭</p>
           <p *ngIf="sortedReactions.length > 0 && sortedReactions[0][0] === wrr" class="">😡</p>
+          <span [ngClass]="{
+          'tooltiptext text-[14px] w-[25px] bg-neutral text-white': true,
+           'w-[35px]': sortedReactions[0][1] > 9,
+           'w-[45px]': sortedReactions[0][1] > 99,
+           'w-[55px]': sortedReactions[0][1] > 999,
+           }"
+          >{{ sortedReactions[0][1] }}</span>
         </div>
-        <div *ngIf="sortedReactions.length > 1" class="tooltip tooltip-top" data-tip="136">
+        <div *ngIf="sortedReactions.length > 1" class="mytooltip" data-tip="136">
           <p *ngIf="sortedReactions[1][0] === like" class="-ml-2">👍</p>
           <p *ngIf="sortedReactions[1][0] === love" class="-ml-2">❤️</p>
           <p *ngIf="sortedReactions[1][0] === haha" class="-ml-2">🤣</p>
           <p *ngIf="sortedReactions[1][0] === wow" class="-ml-2">😮</p>
           <p *ngIf="sortedReactions[1][0] === sad" class="-ml-2">😭</p>
           <p *ngIf="sortedReactions[1][0] === wrr" class="-ml-2">😡</p>
+          <span [ngClass]="{
+          'tooltiptext text-[14px] w-[25px] bg-neutral text-white -ml-2': true,
+           'w-[35px]': sortedReactions[1][1] > 9,
+           'w-[45px]': sortedReactions[1][1] > 99,
+           'w-[55px]': sortedReactions[1][1] > 999,
+           }"
+          >{{ sortedReactions[1][1] }}</span>
         </div>
-        <div *ngIf="sortedReactions.length> 2" class="tooltip tooltip-top" data-tip="1">
+        <div *ngIf="sortedReactions.length> 2" class="mytooltip" data-tip="1">
           <p *ngIf="sortedReactions[2][0] === like" class="-ml-2">👍</p>
           <p *ngIf="sortedReactions[2][0] === love" class="-ml-2">❤️</p>
           <p *ngIf="sortedReactions[2][0] === haha" class="-ml-2">🤣</p>
           <p *ngIf="sortedReactions[2][0] === wow" class="-ml-2">😮</p>
           <p *ngIf="sortedReactions[2][0] === sad" class="-ml-2">😭</p>
           <p *ngIf="sortedReactions[2][0] === wrr" class="-ml-2">😡</p>
+          <span [ngClass]="{
+          'tooltiptext text-[14px] w-[25px] bg-neutral text-white -ml-2': true,
+           'w-[35px]': sortedReactions[2][1] > 9,
+           'w-[45px]': sortedReactions[2][1] > 99,
+           'w-[55px]': sortedReactions[2][1] > 999,
+           }"
+          >{{ sortedReactions[2][1] }}</span>
         </div>
       </div>
       <p class="text-lg font-semibold">{{ post.reactions.sumOfReactions }}</p>
