--- a/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.css
+++ b/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.css
@@ -15,8 +15,8 @@
   position: absolute;
   z-index: 1;
   bottom: 100%;
-  left: 50%;
-  margin-left: -75px;
+  /*left: 50%;*/
+  /*margin-left: -75px;*/
 
   /* Fade in tooltip */
   opacity: 0;
