--- a/frontend/src/app/modules/posts/components/comment-list/comment-list.component.html
+++ b/frontend/src/app/modules/posts/components/comment-list/comment-list.component.html
@@ -7,4 +7,5 @@
   </div>
 </ul>
 <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
-
+<br *ngIf="!isLoading" />
+<app-add-comment></app-add-comment>
