--- a/frontend/src/app/modules/posts/components/comment-list/comment-list.component.html
+++ b/frontend/src/app/modules/posts/components/comment-list/comment-list.component.html
@@ -8,4 +8,4 @@
 </ul>
 <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
 <br *ngIf="!isLoading" />
-<app-add-comment></app-add-comment>
+<app-add-comment (contentAdded)="addComment($event)" [postId]="postId"></app-add-comment>
