--- a/frontend/src/app/modules/posts/components/comment/comment.component.html
+++ b/frontend/src/app/modules/posts/components/comment/comment.component.html
@@ -1,4 +1,4 @@
-<div class="card py-2 px-2 w-[470px]  bg-base-100 shadow-xl " >
+<div class="card bg-[#EBEBEB] py-2 px-2 w-[470px]  bg-base-100 shadow-xl " >
   <div class="flex items-center">
     <div class="w-1/8">
       <div class="avatar m-1">
