--- a/frontend/src/app/modules/posts/components/comment/comment.component.html
+++ b/frontend/src/app/modules/posts/components/comment/comment.component.html
@@ -12,7 +12,7 @@
       <p style="font-size:12px" class="italic">{{formattedDate}}</p>
     </div>
     <div class="ml-auto" style="margin-right: -5px">
-      <app-comment-delete [commentId]="comment.commentId" [authorId]="comment.author.userId"></app-comment-delete>
+      <app-comment-delete (deleted)="handleDeletion($event)" [commentId]="comment.commentId" [authorId]="comment.author.userId"></app-comment-delete>
     </div>
   </div>
   <p class="m-[1px] pl-1 text-sm">{{comment.content}}</p>
