--- a/frontend/src/app/modules/posts/components/add-post/add-post.component.html
+++ b/frontend/src/app/modules/posts/components/add-post/add-post.component.html
@@ -2,12 +2,12 @@
   <form [formGroup]="myForm" (ngSubmit)="onFormSubmit()" class="space-y-6">
     <div>
       <div class="mt-2">
-        <textarea id="content" formControlName="content" class="text-black w-full" placeholder="What's on your mind?" name="content" type="text"></textarea>
+        <textarea (keydown.enter)="onFormSubmit()" id="content" formControlName="content" class="text-black w-full" placeholder="What's on your mind?" name="content" type="text"></textarea>
       </div>
       <div>
-        <button [disabled]="isLoading()" class="app-btn btn-primary">
-          <span *ngIf="isLoading()" class="loading loading-spinner"></span>
-          <ng-container *ngIf="!isLoading()">
+        <button [disabled]="isLoading" class="app-btn btn-primary">
+          <span *ngIf="isLoading" class="loading loading-spinner"></span>
+          <ng-container *ngIf="!isLoading">
             Post
           </ng-container>
         </button>
@@ -15,4 +15,3 @@
     </div>
   </form>
 </div>
-
