--- a/frontend/src/app/modules/posts/components/add-comment/add-comment.component.html
+++ b/frontend/src/app/modules/posts/components/add-comment/add-comment.component.html
@@ -7,9 +7,9 @@
         </div>
       </div>
     </div>
-    <form [formGroup]="myForm">
+    <form (ngSubmit)="onFormSubmit()">
       <div [ngClass]="{'w-[480px]': !isLoading, 'w-[430px]': isLoading}" class="relative px-2 ml-2 flex flex-nowrap">
-        <textarea id="content" formControlName="content" class="text-black w-full" placeholder="Add a comment..." name="content" type="text"></textarea>
+        <textarea [formControl]="contentControl" (keydown.enter)="onFormSubmit()" class="text-black w-full" placeholder="Add a comment..." type="text"></textarea>
         <button *ngIf="!isLoading" class="material-symbols-outlined cursor-pointer absolute top-0 right-8 ">send</button>
         <div *ngIf="!isLoading" (click)="onFormSubmit()" class="tooltip tooltip-top cursor-pointer w-[30px] h-[30px] top-2 right-14" data-tip="Send"></div>
         <span *ngIf="isLoading" class="loading loading-spinner absolute right-4 top-2"></span>
