--- a/frontend/src/app/modules/posts/components/post/post/post.component.html
+++ b/frontend/src/app/modules/posts/components/post/post/post.component.html
@@ -18,7 +18,7 @@
         </span>
       </div>
     </div>
-    <p *ngIf="!isEdited" class="m-[1px]">{{post.content}}</p>
+    <p *ngIf="!isEdited" style="max-width: 100%" class="m-[1px] break-words">{{post.content}}</p>
     <app-edit-post [authorId]="post.author.userId" class="-translate-y-[24px]" (contentUpdated)="updateContent($event)" [postId]="post.postId" [currentContent]="post.content" *ngIf="isEdited"></app-edit-post>
     <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
 
