--- a/frontend/src/app/modules/posts/components/comment/comment.component.html
+++ b/frontend/src/app/modules/posts/components/comment/comment.component.html
@@ -11,7 +11,7 @@
       <h2 class="text-sm font-semibold">{{comment.author.fullName}}</h2>
       <p style="font-size:12px" class="italic">{{formattedDate}}</p>
     </div>
-    <div class="ml-auto" style="margin-right: -5px">
+    <div class="ml-auto">
       <app-comment-delete (deleted)="handleDeletion($event)" [commentId]="comment.commentId" [authorId]="comment.author.userId"></app-comment-delete>
     </div>
   </div>
