--- a/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
+++ b/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
@@ -1,30 +1,15 @@
 <div *ngIf="visible" class="tooltip tooltip-bottom cursor-pointer -top-4" data-tip="Delete">
-<span class="material-symbols-outlined relative -bottom-2" (click)="openModal('modal_'+postId)">
+<span class="material-symbols-outlined relative -bottom-2" (click)="openModal('modalPost_'+postId)">
 delete
 </span>
 </div>
-<dialog id="modal_{{postId}}" class="modal">
-
-  <div class="modal-box">
-    <h1 class="font-bold text-lg text-center" style="font-size: 22px">Do you really want to delete your post?</h1>
-    <p class="py-4 text-center text-accent" style="font-size: 16px">The post data will be lost forever!</p>
-    <div class="modal-action justify-between">
-      <form method="dialog" class="form1">
-        <button class="btn">CANCEL</button>
-      </form>
-      <form (ngSubmit)="onFormSubmit('modal_'+postId)" class="form2">
-        <button [disabled]="isLoading()" class="btn btn-primary">
-          <span *ngIf="isLoading()" class="loading loading-spinner"></span>
-          <ng-container *ngIf="!isLoading()">
-            DELETE
-          </ng-container>
-        </button>
-      </form>
-    </div>
-  </div>
-  <form method="dialog" class="modal-backdrop" style="cursor: auto !important;">
-    <a (click)="closeModal('modal_'+postId)">close</a>
-  </form>
-</dialog>
+<app-delete-modal
+  [modalId]="'modal_' + postId"
+  [title]="'Delete Post'"
+  [message]="'Do you really want to delete your post? The post data will be lost forever!'"
+  [isLoading]="isLoading()"
+  (confirm)="onFormSubmit('modalPost_' + postId)"
+  (cancel)="closeModal('modalPost_' + postId)"
+></app-delete-modal>
 
 
