--- a/frontend/src/app/modules/posts/components/comment-delete/comment-delete.component.html
+++ b/frontend/src/app/modules/posts/components/comment-delete/comment-delete.component.html
@@ -4,7 +4,7 @@
   </span>
 </div>
 <app-delete-modal
-  [modalId]="'modal_' + commentId"
+  [modalId]="'modalComment_' + commentId"
   [title]="'Delete Comment'"
   [message]="'Do you really want to delete your comment? The comment data will be lost forever!'"
   [isLoading]="isLoading"
