--- a/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
+++ b/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
@@ -4,7 +4,7 @@ delete
 </span>
 </div>
 <app-delete-modal
-  [modalId]="'modal_' + postId"
+  [modalId]="'modalPost_' + postId"
   [title]="'Delete Post'"
   [message]="'Do you really want to delete your post? The post data will be lost forever!'"
   [isLoading]="isLoading"
