--- a/frontend/src/app/modules/posts/components/comment/comment.component.html
+++ b/frontend/src/app/modules/posts/components/comment/comment.component.html
@@ -7,13 +7,21 @@
         </div>
       </div>
     </div>
-    <div style="padding-left:2px; margin-top: -8px ">
+    <div class="pl-[2px] -mt-[8px]">
       <h2 class="text-sm font-semibold">{{comment.author.fullName}}</h2>
-      <p style="font-size:12px" class="italic">{{formattedDate}}</p>
+      <p class="italic text-[12px]">{{formattedDate}}</p>
     </div>
 
 
   </div>
-  <p class="m-[1px] pl-1 text-sm">{{comment.content}}</p>
+  <p class="m-[1px] mb-2 pl-1 text-sm">{{comment.content}}</p>
 
+</div>
+<div class="absolute flex flex-row justify-between w-[470px] -mt-3 px-4">
+  <button class="rounded px-2 bg-stone-400 hover:text-pink-800">
+    <span class="material-symbols-outlined inline text-sm">thumb_up</span> Like
+  </button>
+  <div class="rounded px-2 bg-stone-400">
+    <app-reactions-display [reactions]="comment.reactionsGetDTO" [isComment]="true"></app-reactions-display>
+  </div>
 </div>
