--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -12,6 +12,33 @@
   .app-textarea {
     @apply bg-secondary rounded-lg min-h-[10rem] shadow-md shadow-gray-500 text-white p-2 placeholder-white focus:border-black focus:border-2
   }
+  .mytooltip {
+    position: relative;
+    display: inline-block;
+  }
+
+  /* Tooltip text */
+  .mytooltip .tooltiptext {
+    visibility: hidden;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    /* Position the tooltip text */
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+
+    /* Fade in tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .mytooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 @font-face {
