--- a/frontend/src/app/modules/posts/components/comment-list/comment-list.component.html
+++ b/frontend/src/app/modules/posts/components/comment-list/comment-list.component.html
@@ -1,9 +1,10 @@
+<app-sort-comments (sort)="handleSorting($event.sortBy, $event.sortOrder)"></app-sort-comments>
 <ul class="flex flex-col gap-4">
   <li *ngFor="let comment of comments">
     <app-comment (deleted)="handleDeletion($event)" [comment]="comment"></app-comment>
   </li>
   <div *ngIf="totalComments !== currentComments" class="text-center">
-    <p (click)="getComments(10)" class="text-xs cursor-pointer inline-block">Show more comments...</p>
+    <p (click)="getComments(10, currentPage)" class="text-xs cursor-pointer inline-block">Show more comments...</p>
   </div>
 </ul>
 <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
