--- a/frontend/src/app/modules/posts/components/sort-comments/sort-comments.component.html
+++ b/frontend/src/app/modules/posts/components/sort-comments/sort-comments.component.html
@@ -1,9 +1,9 @@
 <div class="flex justify-between -mt-4 mb-3">
-  <div class="dropdown dropdown-hover">
+  <div class="dropdown dropdown-hover ">
     <p tabindex="0">Sort by: {{ sortByTitle }}</p>
-    <ul tabindex="0" class="dropdown-content border-b-black border-solid z-[1] menu p-2 shadow bg-base-300  rounded-box">
-      <li><a (click)="changeParameter('date')">Date</a></li>
-      <li><a (click)="changeParameter('reactions')">Reactions</a></li>
+    <ul tabindex="0" class="dropdown-content border border-black z-[1] menu p-2 shadow bg-base-300  rounded-xl" id="dropdownMenu">
+      <li><a class="hover:bg-base-100 rounded-xl" (click)="changeParameter('date'); removeFocus()">Date</a></li>
+      <li><a class="hover:bg-base-100 rounded-xl" (click)="changeParameter('reactions'); removeFocus()">Reactions</a></li>
     </ul>
   </div>
   <p (click)="changeOrder()" class="cursor-pointer">{{ sortOrderTitle }}</p>
