reactions display fix

--- a/frontend/src/app/modules/posts/components/reactions-display/reactions-display.component.html
+++ b/frontend/src/app/modules/posts/components/reactions-display/reactions-display.component.html
@@ -47,5 +47,5 @@
       >{{ sortedReactions[2][1] }}</span>
     </div>
   </div>
-  <p class="text-lg font-semibold">{{ reactions.sumOfReactions }}</p>
+  <p class="text-lg font-semibold">{{ sumOfReactions }}</p>
 </div>
