--- a/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
+++ b/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="isVisible" class="italic text-[14px] text-right">Edited {{ formattedDate }}</div>
 <div class="flex flex-row justify-between p-1">
   <div class="flex flex-row justify-between w-full rounded">
-    <app-reactions-display [reactions]="post.reactions"></app-reactions-display>
+    <app-reactions-display [sortedReactions]="sortedReactions" [sumOfReactions]="reactions.sumOfReactions"></app-reactions-display>
     <div class="flex flex-row gap-2 px-2">
       <span class="material-symbols-outlined text-secondary my-auto">comment</span>
       <p class="text-lg font-semibold">420</p>
