parse comments' reactions, fix reaction display for comments

--- a/frontend/src/app/modules/posts/components/comment/comment.component.html
+++ b/frontend/src/app/modules/posts/components/comment/comment.component.html
@@ -22,6 +22,6 @@
     <span class="material-symbols-outlined inline text-sm">thumb_up</span> Like
   </button>
   <div class="rounded px-2 bg-stone-400">
-<!--    <app-reactions-display [reactions]="comment.reactionsGetDTO" [isComment]="true"></app-reactions-display>-->
+    <app-reactions-display [sortedReactions]="sortedReactions" [sumOfReactions]="postReactionTypesCount" [isComment]="true"></app-reactions-display>
   </div>
 </div>
