--- a/frontend/src/app/modules/posts/components/reactions-display/reactions-display.component.html
+++ b/frontend/src/app/modules/posts/components/reactions-display/reactions-display.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-row gap-2 pl-1 pr-2">
-  <div class="flex flex-row" [ngClass]="{'text-sm': isComment, 'text-xl': !isComment}">
+  <div [ngClass]="{'text-xl': !isComment}">
     <div class="mytooltip my-auto">
       <p *ngIf="sortedReactions.length === 0" class="">👍</p>
       <p *ngIf="sortedReactions.length > 0 && sortedReactions[0][0] === like" class="">👍</p>
