--- a/frontend/src/app/modules/posts/components/like-button/like-button.component.html
+++ b/frontend/src/app/modules/posts/components/like-button/like-button.component.html
@@ -1,7 +1,7 @@
 <button [ngClass]="{
-  'mytooltip hover:bg-base-200 rounded py-1': true,
-  'w-[calc(470px/3)]': !isComment,
-  'text-sm bg-stone-400 px-3': isComment
+  'mytooltip hover:bg-base-200 py-1': true,
+  'w-[calc(470px/3)] rounded': !isComment,
+  'text-sm bg-stone-400 px-3 rounded-full': isComment
  }">
   <div [ngClass]="{
   'flex flex-row gap-2 justify-center': true,
