numberOfComments on Display done

--- a/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
+++ b/frontend/src/app/modules/posts/components/post-bottom-bar/post-bottom-bar.component.html
@@ -4,7 +4,7 @@
     <app-reactions-display [sortedReactions]="sortedReactions" [sumOfReactions]="reactions.sumOfReactions"></app-reactions-display>
     <div class="flex flex-row gap-2 px-2">
       <span class="material-symbols-outlined text-secondary my-auto">comment</span>
-      <p class="text-lg font-semibold">420</p>
+      <p class="text-lg font-semibold">{{ post.totalNumberOfComments }}</p>
     </div>
   </div>
 </div>
