--- a/frontend/src/app/modules/posts/components/comment/comment.component.html
+++ b/frontend/src/app/modules/posts/components/comment/comment.component.html
@@ -12,10 +12,14 @@
       <p class="italic text-[12px]">{{formattedDate}}</p>
     </div>
     <div class="ml-auto">
-      <app-comment-delete (deleted)="handleDeletion($event)" [commentId]="comment.commentId" [authorId]="comment.author.userId"></app-comment-delete>
+      <app-comment-delete  (deleted)="handleDeletion($event)" [commentId]="comment.commentId" [authorId]="comment.author.userId"></app-comment-delete>
+      <span *ngIf="userId === comment.author.userId" (click)="enableEditing()" class="tooltip tooltip-bottom cursor-pointer -top-4" data-tip="Edit">
+          <span class="material-symbols-outlined relative -bottom-2 text-primary" [class.text-primary]="isEdited" >edit</span>
+        </span>
     </div>
   </div>
-  <p class="m-[1px] mb-2 pl-1 text-sm">{{comment.content}}</p>
+  <p *ngIf="!isEdited" class="m-[1px] mb-2 pl-1 text-sm break-words">{{comment.content}}</p>
+  <app-edit-comment class="-translate-y-[24px] m-[1px] mb-1.5 pl-1 text-sm break-words" (contentUpdated)="updateComment($event)" *ngIf="isEdited" [authorId]="comment.author.userId" [commentId]="comment.commentId" [currentContent]="comment.content" ></app-edit-comment>
 
 </div>
 <div class="absolute flex flex-row justify-between w-[470px] -mt-3 px-4">
