--- a/frontend/src/app/modules/posts/components/comment/comment.component.html
+++ b/frontend/src/app/modules/posts/components/comment/comment.component.html
@@ -20,8 +20,10 @@
   </div>
   <p *ngIf="!isEdited" class="m-[1px] mb-2 pl-1 text-sm break-words">{{comment.content}}</p>
   <app-edit-comment class="-translate-y-[24px] m-[1px] mb-1.5 pl-1 text-sm break-words" (contentUpdated)="updateComment($event)" *ngIf="isEdited" [authorId]="comment.author.userId" [commentId]="comment.commentId" [currentContent]="comment.content" ></app-edit-comment>
+  <div *ngIf="formattedDateOfEditing != formattedDate" class="italic -mt-4 pb-1 pr-1 text-[12px] text-right">Edited {{ formattedDateOfEditing }}</div>
 
 </div>
+
 <div class="absolute flex flex-row justify-between w-[470px] -mt-3 px-4">
   <app-like-button [isComment]="true" [currentUserReaction]="comment.currentUserReactionType" (changeReaction)="upsertReaction($event)"></app-like-button>
   <div class="rounded-full px-2 bg-stone-400">
