--- a/frontend/src/app/modules/posts/components/edit-comment/edit-comment.component.html
+++ b/frontend/src/app/modules/posts/components/edit-comment/edit-comment.component.html
@@ -10,7 +10,7 @@
   </div>
   <form [formGroup]="myForm" (ngSubmit)="onFormSubmit()" class="">
     <div class="grow-wrap">
-      <textarea id="commentContent" (keydown.enter)="onFormSubmit()" rows="1" formControlName="commentContent" name="commentContent" class="resize-none bg-[#D9D9D9] border-black border-[1px] w-full rounded max-h-screen max-w-full" onInput="this.parentNode.dataset.replicatedValue = this.value">{{currentContent}}</textarea>
-    </div>
+      <textarea id="commentContent" rows="{{numberOfRows}}" (keydown.enter)="onFormSubmit()" formControlName="commentContent" name="commentContent" class="resize-none bg-[#D9D9D9] border-black border-[1px] w-full rounded max-h-screen max-w-full" onInput="this.parentNode.dataset.replicatedValue = this.value">{{currentContent}}</textarea>    </div>
   </form>
 </div>
+
