--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,10 +1,10 @@
-<header class="top-0 left-0 navbar h-20 fixed bg-primary z-40">
+<header id="header" class="top-0 left-0 fixed navbar h-20 bg-primary z-40">
   <!-- logo -->
   <div class="navbar-start ml-4 w-100 lg:ml-16">
     <h1 class="text-3xl my-auto font-bold cursor-pointer select-none" routerLink="/">SpeakApp</h1>
   </div>
   <!-- center menu-->
-  <nav
+  <nav id="navbar"
     class="md:navbar-center md:static md:justify-center md:gap-16 md:w-auto
            text-lg fixed left-0 bottom-0 bg-primary w-full h-20 m-0 justify-between px-4 flex flex-row "
   >
