--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -47,7 +47,8 @@
       </div>
     </div>
   </div>
-  <select (change)="themeChanges($event)" class="select select-sm">
-    <option *ngFor="let theme of themes" [value]="theme">{{ theme }}</option>
-  </select>
+<!--  <select (change)="themeChanges($event)" class="select select-sm">-->
+<!--    <option *ngFor="let theme of themes" [value]="theme">{{ theme }}</option>-->
+<!--  </select>-->
+  <button class="app-btn bg-secondary" (click)="logoutUser()">Logout</button>
 </header>
