--- a/frontend/src/app/modules/posts/components/post/post/post.component.html
+++ b/frontend/src/app/modules/posts/components/post/post/post.component.html
@@ -1,16 +1,6 @@
 <div class="card py-2 bg-base-300 w-[500px] shadow-xl">
     <div class="flex items-center">
-      <div class="w-1/8">
-        <div class="avatar">
-          <div class="w-12 rounded-full">
-            <img src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />
-          </div>
-        </div>
-      </div>
-      <div style="padding-left: 10px" >
-        <h2 class="text-xl font-semibold">{{post.author.fullName}}</h2>
-        <p style="font-size: 12px" class="italic">{{formattedDate}}</p>
-      </div>
+      <app-author-preview [fullName]="post.author.fullName" [formattedDate]="formattedDate"></app-author-preview>
       <div class="ml-auto" style="margin-right: -5px">
         <app-delete-post (deleted)="handleDeletion($event)" [postId]="post.postId" [authorId]="post.author.userId"></app-delete-post>
         <span *ngIf="userId === post.author.userId" (click)="enableEditing()" class="tooltip tooltip-bottom cursor-pointer -top-4" data-tip="Edit">
